--- a/web/menuUsuario.xhtml
+++ b/web/menuUsuario.xhtml
@@ -17,21 +17,20 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></link>
 
     <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" style="color: #ffa812;">&times;</a>
-        <div class="overlay-content user-menu">
-            <c:if test="#{loginBean.usuarioLogado != null}">
+        <a href="javascript:void(0)" class="closebtn fechar" onclick="closeNav()" style="color: #ffa812;">&times;</a>
+
+        <div class="overlay-content user-menu" style="margin-top: -50px;">
             <img src="imagens/foto.jpg" alt="Foto do usuário" class="circular"/>
-            <a href="#{usuarioBean.VerPerfil(loginBean.usuarioLogado.idUsuario)}" style="font-size: 27px;color: #ffa812;">Meu Perfil</a>
+            <h:form>
+            <h:commandLink action="#{loginBean.VerPerfil()}" style="font-size: 27px;color: #ffa812;">Meu Perfil</h:commandLink>
+            </h:form>
             <a href="meusAnimais.jsf" style="font-size: 27px;color: #ffa812;">Meus Animais</a>
-            <a href="minhasAdocoes.jsf" style="font-size: 27px;color: #ffa812;">Minhas Adoções</a>
+            <a href="meusEncontros.jsf" style="font-size: 27px;color: #ffa812;">Meus Encontros</a>
             <a href="meusEventos.jsf" style="font-size: 27px;color: #ffa812;">Meus Eventos</a>
             <a href="meusAnuncios.jsf" style="font-size: 27px;color: #ffa812;">Meus Anúncios</a>
             <a href="minhasExperiencias.jsf" style="font-size: 27px;color: #ffa812;">Minhas Experiências</a>
-            </c:if>
-
         </div>
     </div>
-
 
     <div style="position: fixed; width: 100%; top:0; z-index: 99;">
         <nav class="navbar navbar-inverse">
@@ -59,15 +58,16 @@
 
                     <ul class="nav navbar-nav navbar-right ">
                         <c:if test="#{loginBean.usuarioLogado != null}">
-                            <li><a style="font-size:30px;cursor:pointer;color: #ffa812; font-size: 15px;" onclick="openNav()">#{loginBean.usuarioLogado.nomeUsuario}</a></li>
-                            <li><a href="#" style="color: #ffa812; font-size: 15px;">Sair</a></li>
+                            <li><a style="font-size:30px;cursor:pointer;color: #ffa812; font-size: 15px;" onclick="openNav()"> #{loginBean.usuarioLogado.nomeUsuario} </a></li>
+                            <h:form>
+                            <li><h:commandLink action="#{loginBean.Deslogar()}" style="color: #ffa812; font-size: 15px;">Sair</h:commandLink></li>
+                            </h:form>
                         </c:if>
                         <c:if test="#{loginBean.usuarioLogado == null}">
                             <li><a href="loginSignin.jsf" style="color: #ffa812; font-size: 15px;">Entrar</a></li>
-                            <li><a href="cadastrarUsuario.jsf" style="color: #ffa812; font-size: 15px;">Cadastro</a></li>
+                            <li><a href="cadastrarUsuario.jsf" style="color: #ffa812; font-size: 15px;">Cadastre-se</a></li>
                         </c:if>
                     </ul>
-
                 </div>
             </div>
         </nav>
@@ -86,7 +86,6 @@
             overflow-y: hidden;
             transition: 0.5s;
         }
-
         .overlay-content {
             position: relative;
             top: 25%;
@@ -94,27 +93,23 @@
             text-align: center;
             margin-top: 30px;
         }
-
         .overlay a {
-            padding: 8px;
+            /*padding: 8px;*/
             text-decoration: none;
-            font-size: 36px;
+            font-size: 30px;
             color: #818181;
             display: block;
             transition: 0.3s;
         }
-
         .overlay a:hover, .overlay a:focus {
             color: #f1f1f1;
         }
-
         .overlay .closebtn {
             position: absolute;
             top: 20px;
             right: 45px;
             font-size: 60px;
         }
-
         @media screen and (max-height: 450px) {
             .overlay {overflow-y: auto;}
             .overlay a {font-size: 20px}
@@ -125,19 +120,14 @@
             }
         }
         .position{
-
             margin-left: 930px;
-
         }
         .user-menu{
             margin-top: -6%;
-
         }
         img {
-
             border-radius: 900px;
         }
-
         .circular {
             width: 190px;
             height: 190px;
@@ -146,56 +136,73 @@
             -moz-border-radius: 150px;
             background: url() no-repeat;
         }
-
         .circular img {
             opacity: 0;
             filter: alpha(opacity=0);
         }
-
-
         .search {
-            /*padding: 5px 0;*/
             width: 230px;
-            /*height: 30px; */
             position: relative;
-            /*left: 10px;
-            //float: left;
-            //line-height: 22px;*/
         }
-
         .search input {
-            /*position: absolute;*/
             width: 0px;
-            /*float: Left;
-            //margin-left: 150px;
-            //-webkit-transition: all 0.7s ease-in-out;
-            //-moz-transition: all 0.7s ease-in-out;
-            //-o-transition: all 0.7s ease-in-out;*/
             transition: all 0.7s ease-in-out;
             height: 30px;
             line-height: 18px;
-            /*padding: 0 2px 0 2px;
-            //border-radius:10px;*/
         }
-
         .search:hover input, .search input:focus {
             width: 200px;
-            /*margin-left: 0px;
-            //margin-left: 8px;*/
         }
-
         .btnn {
             height: 30px;
             position: absolute;
             right: 0;
             top: 7px;
-            /* border-radius:1px;*/
-
         }
+        .overlay {
+            height: 0%;
+            width: 100%;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0, 0.9);
+            overflow-y: hidden;
+            transition: 0.5s;
+        }
+        .overlay-content {
+            position: relative;
+            top: 25%;
+            width: 100%;
+            text-align: center;
+            margin-top: 30px;
+        }
+        .overlay .fechar{
+            padding: 20px;
+            text-decoration: none;
+            font-size: 36px;
+            color: #818181;
+            display: block;
+            transition: 0.3s;
+        }
+        .overlay a:hover, .overlay a:focus {
+            color: #f1f1f1;
+        }
+        .overlay .closebtn {
+            position: absolute;
+            top: 20px;
+            right: 45px;
+            font-size: 60px;
+        }
+        @media screen and (max-height: 450px) {
+            .overlay {overflow-y: auto;}
+            .overlay a {font-size: 20px}
+            .overlay .closebtn {
+                font-size: 40px;
+                top: 15px;
+                right: 35px;
+            }     
+        </style>
 
-
-    </style>
-
-
-
-</html>
+    </html>
