--- a/web/animal.xhtml
+++ b/web/animal.xhtml
@@ -85,7 +85,8 @@
                                                             <div class="col-md-5">
                                                                 <div align="left">
                                                                     <h:inputHidden value="#{animalBean.animal.idAnimal}"/>
-                                                                    <p>Responsável: <a href="perfilUsuario.jsf" style="text-decoration: none; color: black;">#{animalBean.dono.nomeUsuario}</a></p>
+                                                                    
+                                                                    <p>Responsável: <h:form><h:commandLink action="#{animalBean.VerResponsavel()}" style="text-decoration: none; color: black;">#{animalBean.dono.nomeUsuario}</h:commandLink></h:form></p>
                                                                     <p>Espécie: #{animalBean.animal.especie}</p>
                                                                     <p>Idade: #{animalBean.animal.idade}</p>
                                                                     <p>Raça: #{animalBean.animal.raca}</p>
@@ -107,7 +108,7 @@
                                                     <c:if test="#{loginBean.usuarioLogado != null and animalBean.animal.idUsuario == loginBean.usuarioLogado.idUsuario}">
                                                         <p>
                                                             <h:form>
-                                                                <h:commandLink action="#{animalBean.EditarAnimal()}" value="Editar" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;"/>
+                                                                <h:commandLink action="#{animalBean.EditarAnimal(animalBean.animal)}" value="Editar" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;"/>
                                                             </h:form>
                                                         </p>
                                                     </c:if>
@@ -148,6 +149,7 @@
                     </div>
                     <div class="modal-body">
                         <h:form >
+                            <h:inputHidden value="#{animalBean.animal.idAnimal}"/>
                             <div class="col-md-12">
                                 <div class="row">
 
