--- a/web/clinicasPetshops.xhtml
+++ b/web/clinicasPetshops.xhtml
@@ -3,126 +3,180 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:b="http://bootsfaces.net/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
-        <title>Help Pet - Clinicas e Petshops</title>
+        <title>Help Pet - Clínicas e Pet Shops</title>
 
         <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon"></link>
 
-        <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-        <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css"></link>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"></link>
 
+        <link rel="stylesheet" type="text/css" href="css/helppet_css.css"></link>
 
-        <link type="text/css" rel="stylesheet" href="css/css_helppet.css"  media="screen,projection"/>
-
-        <script type="text/javascript" src="js/materialize.js"></script>
-        <script type="text/javascript" src="js/materialize.min.js"></script>
-
-
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></link>
-
-
-        <link type="text/css" rel="stylesheet" href="css/bootstrap_paper.css"  media="screen,projection"/>
-        <link type="text/css" rel="stylesheet" href="css/bootstrap.min_paper.css"  media="screen,projection"/>
-
+        <script src="js/jquery-1.11.0.min.js"></script>
     </h:head>
-    <h:body>
+    <h:body style="background-color: #F0F0F0;">
 
         <!-- Menu -->
-
         <div id="header">
             <ui:insert name="header">
                 <!-- Import de página de menu -->
-                <ui:include src="menu.xhtml"/>
+                <ui:include src="menuUsuario.xhtml"/>
             </ui:insert>
         </div>
 
+
         <!-- Título da página -->
-        <div id="home" class="home">
-            <div class="text-vcenter">
-                <h1 style="color: #00EEEE;">#Adote</h1>
-                <h2 style="color: #ffa812;">AJUDE OS ANIMAIS A ENCONTRAREM UM LAR!</h2>
-                <p class="lead" style="color: #ffa812;">Adote um novo pet, ou o ajude a encontrar um lar!</p>
-                <h:form>
-                    <a href="#novoanimal" style="background-color: #ffa812; color: white;" class="btn btn-default">Novo Animal</a>
-                </h:form>
-            </div>
+        <div style="margin-top: 7%; height: 100px; background-color: #b48cd0;" align="center">
+            <h3 align="center" style="color: white; padding-top:  20px;">Clínicas e Pet Shops</h3>
+            <hr style="margin-left: 10px; margin-right: 20px;"/>
         </div>
 
-        <!-- Opções -->
-        <div class="container-fluid">
-            <b:row>
-                <b:column col-md="8">
-                    <!--Ajustar-->
-                </b:column>
 
-                <h:form class="form-signin">
-                    <b:column col-md="2">
-                        <b:selectOneMenu value="#" style="width: 170px; height: 40px; color: #ffa812;" class="form-control">
-                            <f:selectItem itemLabel="Tipo" itemValue="1"/>
-                            <f:selectItem itemLabel="Adoção" itemValue="1"/>
-                            <f:selectItem itemLabel="Perdido" itemValue="2"/>
-                        </b:selectOneMenu>
-                    </b:column>
-                    <b:column col-md="1">
-                        <b:button value="Ok" style="background-color: #ffa812; color: white;" class="btn btn-default"/>
-                    </b:column>
-                </h:form>
-            </b:row>
+        <!-- Listagem  -->
 
-            <!-- Listagem de animais -->
-            <b:row>
-                <c:forEach var="clinica" items="#{pjBean.pjs}">
+        <div class="container" id="tourpackages-carousel" >
+            <div class="row">
+                <br/><br/>
+                <c:forEach var="clinica" items="#{pjBean.clinicas}">
                     <div class="col-xs-18 col-sm-6 col-md-3">
-                        <div class="thumbnail">
-                            <img src="imagens/gato3.jpg" alt="Foto do animal" style="width:280px; height:280px;"/>
+                        <div class="thumbnail caixa">
+                            <img src="imagens/petshop.jpg" alt="Foto da Clínica ou Pet Shop" style="width:100%; height:170px; border-radius: 0px;"/>
                             <div class="caption" align="center">
-                                <h4>#{clinica.nomeUsuario}</h4>
+                                <h5>#{clinica.nomeUsuario}</h5>
                                 <div align="left">
-                                    
+                                    <p>#{clinica.localizacao}</p>
                                 </div>
-                                <h:form>
-                                    <p><b:commandButton action="#{pjBean.VerClinica(clinica)}" value="Ver Mais" class="btn btn-default" style="background-color: #ffa812; color: white;"/></p>
-                                </h:form>
+                                <p><a href="perfilClinicaPetShop.jsf" class="btn btn-default" style="background-color: #b48cd0; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
                             </div>
                         </div>
                     </div>
                 </c:forEach>
-            </b:row>
 
-        </div>
 
-        <!-- Paginação-->
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12" align="center">
-                    <div class="btn-group">
-                        <a href="#" class="btn btn-default">1</a>
-                        <a href="#" class="btn btn-default">2</a>
-                        <a href="#" class="btn btn-default">3</a>
-                        <a href="#" class="btn btn-default">4</a>
+                <!-- Área de pesquisa -->
+                <div id="container-floating">
+                    <div id="floating-button" style="background-color: #b48cd0;">
+                        <a href="#" data-toggle="modal" data-target="#pesquisa" >
+                            <i class="material-icons" style="color: white; margin-top: 17px; margin-left: 15px;"> search</i>
+                        </a>
                     </div>
                 </div>
+
+
+
+                <!-- Formulário -->
+
+                <div class="modal fade" id="pesquisa" role="dialog">
+                    <div class="modal-dialog">
+
+                        <!-- Conteúdo -->
+                        <div class="modal-content">
+                            <div class="modal-header" align="center">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 class="modal-title">Busca</h4>
+                                <hr/>
+                                <h5>Busque por clínica ou pet shop mais próximo de você!</h5>
+                            </div>
+                            <div class="modal-body">
+                                <h:form>
+                                    <div class="col-md-12">
+                                        <div class="row">
+
+                                            <div class="col-md-2" align="left">
+                                                <label style="font-size: 14px;color: black; padding-left: 10px;">
+                                                    Estado:  
+                                                </label>
+                                            </div>
+                                            <div class="col-md-10">
+                                                <h:selectOneMenu value="#" style="height: 30px; color: black;font-size: 14px;" class="form-control">
+                                                    <f:selectItem itemLabel="Acre" itemValue="ac"/>
+                                                    <f:selectItem itemLabel="Alagoas" itemValue="al"/>
+                                                    <f:selectItem itemLabel="Amapá" itemValue="ap"/>
+                                                    <f:selectItem itemLabel="Amazonas" itemValue="am"/>
+                                                    <f:selectItem itemLabel="Bahia" itemValue="ba"/>
+                                                    <f:selectItem itemLabel="Ceará" itemValue="ce"/>
+                                                    <f:selectItem itemLabel="Distrito Federal" itemValue="df"/>
+                                                    <f:selectItem itemLabel="Espírito Santo" itemValue="es"/>
+                                                    <f:selectItem itemLabel="Goiás" itemValue="go"/>
+                                                    <f:selectItem itemLabel="Maranhão" itemValue="ma"/>
+                                                    <f:selectItem itemLabel="Mato Grosso" itemValue="mt"/>
+                                                    <f:selectItem itemLabel="Mato Grosso do Sul" itemValue="ms"/>
+                                                    <f:selectItem itemLabel="Minas Gerais" itemValue="mg"/>
+                                                    <f:selectItem itemLabel="Pará" itemValue="pa"/>
+                                                    <f:selectItem itemLabel="Paraíba" itemValue="pb"/>
+                                                    <f:selectItem itemLabel="Paraná" itemValue="pr"/>
+                                                    <f:selectItem itemLabel="Pernambuco	" itemValue="pe"/>
+                                                    <f:selectItem itemLabel="Piauí" itemValue="pi"/>
+                                                    <f:selectItem itemLabel="Rio de Janeiro" itemValue="rj"/>
+                                                    <f:selectItem itemLabel="Rio Grande do Norte" itemValue="rn"/>
+                                                    <f:selectItem itemLabel="Rio Grande do Sul" itemValue="rs"/>
+                                                    <f:selectItem itemLabel="Rondônia" itemValue="ro"/>
+                                                    <f:selectItem itemLabel="Roraima" itemValue="rr"/>
+                                                    <f:selectItem itemLabel="Santa Catarina" itemValue="sc"/>
+                                                    <f:selectItem itemLabel="São Paulo" itemValue="sp"/>
+                                                    <f:selectItem itemLabel="Sergipe" itemValue="se"/>
+                                                    <f:selectItem itemLabel="Tocantins" itemValue="to"/>
+                                                </h:selectOneMenu>                                          
+                                            </div>
+                                            <div class="col-md-2" align="left">
+                                                <label style="font-size: 14px;color: black; padding-left: 10px;">
+                                                    Cidade:  
+                                                </label>
+                                            </div>
+                                            <div class="col-md-10">
+                                                <h:inputText class="form-control" style="width: 100%;font-size: 14px;"/>
+                                            </div>
+
+                                            <div class="col-md-12">
+                                                <br/>
+                                                <button class="btn btn-default" style="background-color: #b48cd0; color: white;border-radius: 0px; width: 100%;" data-dismiss="modal">Pesquisar</button>
+                                                <br/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </h:form>
+                            </div>
+                            <div class="modal-footer">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
 
-        
-        <br/>
-        <!-- Rodapé -->
-        <div id="footer" align="center">
-            <b:row>
-                <ui:insert name="footer">
-                    <!-- Import de página do rodapé -->
-                    <ui:include src="rodape.xhtml"/>
-                </ui:insert>
-            </b:row>
-        </div>
-        <br/>
-    </h:body>
-    <h:outputScript library="(whatever)" name="(whatever)/jQuery-(whatever).js" />
-</html>
 
+        <!-- Paginação -->
+        <div align="center">
+            <nav aria-label="...">
+                <ul class="pagination">
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#" tabindex="-1" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                    <li class="page-item active">
+                        <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="page-item" style="color: red; background-color: red;"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+
+
+
+    </h:body>
+</html>
