--- a/web/meusEventos.xhtml
+++ b/web/meusEventos.xhtml
@@ -6,7 +6,8 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
-        <title>Help Pet - Eventos</title>
+
+        <title>Help Pet - Meus Eventos</title>
 
         <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon"></link>
 
@@ -16,7 +17,8 @@
         <link rel="stylesheet" type="text/css" href="css/helppet_css.css"></link>
 
         <script src="js/jquery-1.11.0.min.js"></script>
-        <!-- <script src="js/bootstrap.min.js"></script> -->
+
+
     </h:head>
     <h:body style="background-color: #F0F0F0;">
 
@@ -28,76 +30,84 @@
             </ui:insert>
         </div>
 
-
         <!-- Título da página -->
         <div style="margin-top: 7%; height: 100px; background-color: #87CEFF;">
-            <h3 align="center" style="color: white; padding-top:  20px;">Eventos</h3>
+            <h3 align="center" style="color: white; padding-top:  20px;">Meus eventos</h3>
             <hr style="margin-left: 10px; margin-right: 20px;"/>
         </div>
 
         <!-- Listagem das eventos -->
         <div class="container" id="tourpackages-carousel" >
             <div class="row">
-                <br/><br/>
-                <c:forEach var="evento" items="#{eventoBean.eventos}">
-                    <div class="col-xs-12 col-sm-6 col-md-3">
-                        <div class="thumbnail caixa">
-                            <img src="imagens/evento.png" alt="Foto do Evento" style="width:100%; height:170px; border-radius: 0px;"/>
-                            <div class="caption" align="center">
-                                <h5>#{evento.nomeEvento}</h5>
-                                <div align="left">
-                                    <p>Data: #{evento.dataEvento}</p>
-                                    <p>Local: </p>
-                                </div>
-                                <p><a href="#" class="btn btn-default" data-toggle="modal" data-target="##{evento.idEvento}" style="background-color: #87CEFF; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
+                <br/>
+                <br/>
+                <c:forEach var="evento" items="#{eventoBean.meusEventos}">
+                <div class="col-xs-18 col-sm-6 col-md-3">
+                    <div class="thumbnail caixa">
+                        <img src="imagens/evento.png" alt="Foto do Evento" style="width:100%; height:170px; border-radius: 0px;"/>
+                        <div class="caption" align="center">
+                            <h5>#{evento.nomeEvento}</h5>
+                            <div align="left">
+                                <p>Data: #{evento.dataEvento}</p>
+                                <p>Local: #{evento.localizacao}</p>
+                            </div>
+                            <p><a href="#" class="btn btn-default" data-toggle="modal" data-target="##{evento.idEvento}" style="background-color: #87CEFF; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
 
-                                <!-- Detalhamento do evento -->
+                            <!-- Detalhamento do evento -->
+                            <div class="modal fade" id="#{evento.idEvento}" role="dialog">
+                                <div class="modal-dialog">
 
-                                <div class="modal fade" id="#{evento.idEvento}" role="dialog">
-                                    <div class="modal-dialog">
+                                    <!-- Conteúdo -->
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                            <h4 class="modal-title">#{evento.nomeEvento}</h4>
+                                        </div>
+                                        <div class="modal-body">
 
-                                        <!-- Conteúdo -->
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                                <h4 class="modal-title">#{evento.nomeEvento}</h4>
-                                            </div>
-                                            <div class="modal-body">
-
-                                                <div class="col-md-12">
-                                                    <div class="row">
-                                                        <div class="col-md-1">
-                                                        </div>
-                                                        <div class="col-md-5">
-                                                            <img src="imagens/evento.png" alt="Foto do Evento" style="width:100%; height:250px;border-radius: 0px;"/>
-                                                        </div>
-                                                        <div class="col-md-5">
-                                                            <div align="left">
-                                                                <p>Data: #{evento.dataEvento}</p>
-                                                                <p>Hora: #{evento.horarioEvento}</p>
-                                                                <p>Local: </p>
-                                                                <p>Descrição: #{evento.descricaoEvento}</p>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-md-1">
+                                            <div class="col-md-12">
+                                                <div class="row">
+                                                    <div class="col-md-1">
+                                                    </div>
+                                                    <div class="col-md-5">
+                                                        <img src="imagens/evento.png" alt="Foto do Evento" style="width:100%; height:250px;border-radius: 0px;"/>
+                                                    </div>
+                                                    <div class="col-md-5">
+                                                        <div align="left">
+                                                            <p>Data: #{evento.dataEvento}</p>
+                                                            <p>Hora: #{evento.horarioEvento}</p>
+                                                            <p>Local: #{evento.localizacao}</p>
+                                                            <p>Descrição: #{evento.descricaoEvento}</p>
                                                         </div>
                                                     </div>
+                                                    <div class="col-md-1">
+                                                    </div>
                                                 </div>
-
                                             </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-default" style="background-color: #87CEFF; color: white; border-radius: 0px;" data-dismiss="modal">Fechar</button>
+                                            <div class="col-md-12" style="padding-top: 20px;">
+                                                <div class="row">
+                                                    <div class="col-md-6" align="center" style="padding-bottom: 10px;">
+                                                        <a href="#" class="btn btn-danger " style="border-radius: 0px;"> Excluir</a>
+                                                    </div>
+                                                    <div class="col-md-6" align="center" style="padding-bottom: 10px;">
+                                                        <a href="editarEvento.jsf" class="btn btn-success " style="border-radius: 0px;"> Editar</a>
+                                                    </div>
+                                                </div>
                                             </div>
+                                        </div>
+                                        <div class="modal-footer">
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
+                
                 </c:forEach>
 
-                <!-- Área de pesquisa -->
 
+                <!-- Área de pesquisa -->
                 <div id="container-floating">
 
                     <div id="floating-button" style="background-color: #87CEFF;">
@@ -217,6 +227,7 @@
                 </ul>
             </nav>
         </div>
+
 
     </h:body>
 </html>
